- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)

Version 1.5.3
- CHG: enabled rc4 encryption for the sasl dlls. (Stefan)
- BUG: some context menu entries were shown if multiple items were
       selected even if they only work on single items. (Stefan)

Version 1.5.2
- BUG: the "SVN Copy and Add" right-drag menu was not shown. (Stefan)
- BUG: Editing a conflict during a merge resulted in a crash.
       Note: this is only a workaround for a bug in the svn library which
       won't work in all situations. (Stefan)
- BUG: Log cache CSV export: fix record line endings. (Stefan Fuhrmann)
- BUG: Log cache CSV export: user revprops list incomplete. (Stefan Fuhrmann)
- BUG: The "save revision to..." context menu in the log dialog was shown
       even if multiple revisions were selected. (Stefan)

Version 1.5.1
- CHG: The saslDIGESTMD5.dll has now encryption enabled. (Stefan)
- CHG: TortoiseProc allows now relative paths too. (Stefan)
- BUG: The installer always installed the feature "associate .patch files
       with TortoiseUDiff", even if it was deselected during install. (Stefan)
- BUG: Bogus revision graph for WC paths that have not been changed
       in the respective branch. (Stefan Fuhrmann)
- BUG: Accessing repositories on UNC paths with file:// did not work if
       the UNC path had spaces or special chars in it. (Stefan)
- BUG: If a bugtraq:logregex property was set, entering a log message could
       take up all CPU and block the application for seconds. (Stefan)
- BUG: After removing a versioned directory and recreating a new unversioned
       one in the same place with the same name, the overlays could still
       be shown on that (now) unversioned folder. (Stefan)
- BUG: In interactive merge conflict resolution, the extension-based merge
       tool was not used but always the default merge tool. (Stefan)